Fixed z-index issue.

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -44,7 +44,7 @@
 
   .colors {
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     height: 200px;
     overflow: scroll;
     background: #fff;
